--- a/SearchDemo/SearchDemo/MainPage.xaml
+++ b/SearchDemo/SearchDemo/MainPage.xaml
@@ -1,13 +1,32 @@
-﻿<Page
-    x:Class="SearchDemo.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SearchDemo"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="SearchDemo.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:SearchDemo"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <TextBox x:Name="textBox"
+                 Header="Search"
+                 TextWrapping="Wrap"
+                 PlaceholderText="Type your search query"
+                 Text="{Binding SearchTerm, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged }"
+                 FontSize="22" />
+
+        <ListView x:Name="listView"
+                  Grid.Row="1"
+                  ItemsSource="{x:Bind ViewModel.Results}" />
+
+        <ProgressRing IsActive="{x:Bind ViewModel.IsSearching, Mode=OneWay}"
+                      Grid.Row="1"
+                      Width="100"
+                      Height="100" />
 
     </Grid>
 </Page>
